force-app/main/default/objects/Contact_Affiliations__c/Contact_Affiliations__c.object-meta.xml
<CustomObject>
    <label>Contact Affiliations</label>
    <nameField>
        <displayFormat>CA- {000000}</displayFormat>
        <label>Contact Affiliations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>