force-app/main/default/objects/Contact_Affiliations__c/fields/fusususus__c.field-meta.xml
<CustomField>
    <fullName>fusususus__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&lt;font color=&apos;Red&apos;&gt;papapa&lt;/font&gt;</label>
    <type>Text</type>
</CustomField>